[package]
name = "sumu"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.0"
eframe = { version = "0.24.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["png", "jpeg"] }
rfd = "0.12.1"
